# compute-rs

./: .gitignore  Cargo.toml  _example.rs  example.rs  rust-toolchain.toml  to-do.md
examples/shader-test/: .gitignore  Cargo.toml  build.rs  rust-toolchain.toml
examples/shader-test/my_shader/: Cargo.toml
examples/shader-test/my_shader/src/: lib.rs
examples/shader-test/src/: main.rs
shader-test/: rust-toolchain.toml
shader-test/.cargo/: config.toml
shader-test/src/: main.rs
src/: building.rs  lib.rs  runtime.rs
src/building/: mod.rs  runtime.rs
src/executor/: mod.rs
src/executor/shader/: _.txt  buffer.rs  mod.rs
src/executor/shader/buffer/: buffer_raw.rs  mod.rs
src/gpu/: mod.rs
src/gpu/shader/: Untitled-1.txt  dispatch.rs  dispatch_old  labels.rs  layout.rs  mod.rs
src/gpu/shader/buffer/: buffer_raw.rs  mod.rs  whole_buffer.rs
src/gpu/shader/buffers/: buffer_raw.rs  mod.rs
