[package]
name = "compute-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib"]



[features]
building = ["dep:spirv-builder"]
executor = ["dep:wgpu", "dep:futures"]
# default = ["building", "executor"]




[dependencies]
spirv-builder = { version = "0.9", optional = true }
wgpu = { version = "*", optional = true, features = ["spirv"]}
futures = { version = "0.3", optional = true, default-features = false, features = ["std", "executor"] }