workspace = { members = ["my_shader"] }
[package]
name = "test_bin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
compute-rs = { path = "../compute-rs", features = ["executor"] }

[build-dependencies]
compute-rs = { path = "../compute-rs", features = ["building"] }
            
